# codewars

./: .gitignore  README.md
.github/workflows/: codewars.yml
haskell/: .hlint.yaml  LICENSE  Makefile  README.md  dependencies.dev  fourmolu.yaml  haskell.cabal  package.yaml  stack.yaml
haskell/src/: AlgebraicISO.hs  CamelCase.hs  DblLinear.hs  DontDrinkTheWater.hs  Dups.hs  HighestScoringWord.hs  Huffman.hs  ISO.hs  Josephus.hs  Longestconsec.hs  Maskify.hs  Narcissistic.hs  PickPeak.hs  Square.hs  SumOfIntervals.hs  TreeByLevels.hs
haskell/test/: AlgebraicISOSpec.hs  CamelCaseSpec.hs  DblLinearSpec.hs  DontDrinkTheWaterSpec.hs  DupsSpec.hs  HighestScoringWordSpec.hs  HuffmanSpec.hs  ISOSpec.hs  JosephusSpec.hs  LongestconsecSpec.hs  MaskifySpec.hs  NarcissisticSpec.hs  PickPeakSpec.hs  Spec.hs  SquareSpec.hs  SumOfIntervalsSpec.hs  TreeByLevelsSpec.hs
python/: .gitignore  Makefile  README.md  pyproject.toml
python/codewars/: anagrams.py  binomial_expansion.py  clean_mean.py  closest_points.py  cube_pile.py  decode_morse.py  decode_morse_adv.py  determinant.py  differentiation.py  directions_reduction.py  factorial_zeros.py  fibonacci.py  five_figure_summary.py  game_of_life.py  grid_path.py  huffman.py  knight_path.py  learning_game.py  likes.py  meeting.py  minesweeper.py  morse.py  name_list.py  pangram.py  parentheses.py  parse_int.py  parts_sums.py  perfect_power.py  pins.py  prime.py  range_extraction.py  readable_time.py  rgb_hex.py  rm_calculator.py  scc.py  simple_assembler.py  strip_comments.py  sudoku_solver.py  sum_intervals.py  tourney.py  (+1 more)
python/tests/: test_anagrams.py  test_binomial_expansion.py  test_clean_mean.py  test_closest_points.py  test_cube_pile.py  test_decode_morse.py  test_decode_morse_adv.py  test_determinant.py  test_differentiation.py  test_directions_reduction.py  test_factorial_zeros.py  test_fibonacci.py  test_five_figure_summary.py  test_game_of_life.py  test_grid_path.py  test_huffman.py  test_knight_path.py  test_learning_game.py  test_likes.py  test_meeting.py  test_minesweeper.py  test_name_list.py  test_pangram.py  test_parentheses.py  test_parse_int.py  test_parts_sums.py  test_perfect_power.py  test_pins.py  test_primes.py  test_range_extraction.py  test_readable_time.py  test_rgb_hex.py  test_rm_calculator.py  test_scc.py  test_simple_assembler.py  test_strip_comments.py  test_sudoku_solver.py  test_sum_intervals.py  test_tourney.py  test_tree_by_levels.py
rust/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rust/algebraic-lists/: Cargo.toml
rust/algebraic-lists/src/: lib.rs
rust/best-travel/: Cargo.toml
rust/best-travel/src/: lib.rs
rust/bouncing-balls/: Cargo.toml
rust/bouncing-balls/src/: lib.rs
rust/caa-stats/: Cargo.toml
rust/caa-stats/src/: lib.rs
rust/count-duplicates/: Cargo.toml
rust/count-duplicates/src/: lib.rs
rust/delete-nth/: Cargo.toml
rust/delete-nth/src/: lib.rs
rust/differentiation/: Cargo.toml
rust/differentiation/src/: lib.rs
rust/dubstep/: Cargo.toml
rust/dubstep/src/: lib.rs
rust/eval-expression/: Cargo.toml
rust/eval-expression/src/: lib.rs
rust/examples/: Cargo.toml  primes.rs
rust/fixtures/asm_interpreter/: program_1.asm  program_2.asm  program_3.asm  program_4.asm  program_5.asm  program_6.asm  program_7.asm
rust/in-array/: Cargo.toml
rust/in-array/src/: lib.rs
rust/integer-partitions/: Cargo.toml
rust/integer-partitions/src/: lib.rs
rust/magnet-particles/: Cargo.toml
rust/magnet-particles/src/: lib.rs
rust/molecule/: Cargo.toml
rust/molecule/src/: lib.rs
rust/parts-sums/: Cargo.toml
rust/parts-sums/src/: lib.rs
rust/perimeter/: Cargo.toml
rust/perimeter/src/: lib.rs
rust/persistent-bugger/: Cargo.toml
rust/persistent-bugger/src/: lib.rs
rust/population-growth/: Cargo.toml
rust/population-growth/src/: lib.rs
rust/prime-factors/: Cargo.toml
rust/prime-factors/src/: lib.rs
rust/product-fib/: Cargo.toml
rust/product-fib/src/: lib.rs
rust/screen-patterns/: Cargo.toml
rust/screen-patterns/src/: lib.rs
rust/simple-graph/: Cargo.toml
rust/simple-graph/src/: lib.rs
rust/snail/: Cargo.toml
rust/snail/src/: lib.rs
rust/spiralize/: Cargo.toml
rust/src/: algebraic_isomorphism.rs  algebraic_lists.rs  assembler_interpreter.rs  best_travel.rs  binomial_expansion.rs  caa_stats.rs  closest_points.rs  count_duplicates.rs  differentiation.rs  double_linear.rs  eval_expression.rs  in_array.rs  integer_partitions.rs  isomorphism.rs  lib.rs  molecule.rs  move_zeros.rs  parts_sums.rs  path_finder.rs  population_growth.rs  prime_factors.rs  primes.rs  product_fib.rs  rail_fence_cipher.rs  recover_secret.rs  round_robin_tourney.rs  screen_patterns.rs  simple_assembler.rs  simple_graph.rs  social_golfer.rs  spiralize.rs  string_incrementer.rs  sudoku_solver.rs  sum_intervals.rs  sum_pairs.rs  tree_levels.rs  validate_sudoku.rs
rust/validate-sudoku/: Cargo.toml
rust/validate-sudoku/src/: lib.rs
sql/: .sqlfluff  Makefile  README.md
sql/scripts/: .sqlfluffignore  basic_create_fn.sql  basic_exists.sql  basic_fulltext_search.sql  basic_group_by.sql  basic_group_by_day.sql  basic_having.sql  basic_hierarchical_structure.sql  basic_in.sql  basic_join_count.sql  basic_join_rank.sql  basic_monsters_case.sql  basic_null_handling.sql  basic_pivot_no_crosstab.sql  basic_pivoting.sql  basic_position.sql  basic_table_totaling.sql  basic_top10.sql  basic_trunc.sql  basic_union_all.sql  basic_view.sql  basic_with.sql  batting_average.sql  beginners_adults_only.sql  beginners_canadian_border.sql  beginners_capitals.sql  bugfix_join.sql  bugfix_totaling.sql  conditional_count.sql  consecutive_runs.sql  count_ip_addresses.sql  count_weekdays.sql  easy_counting_grouping.sql  elven_wildcards.sql  fibonacci_sequence.sql  grocery_store.sql  messy_data.sql  monthly_growth_rate.sql  most_coacting_actors.sql  overlapping_events.sql  (+18 more)
