[tool.poetry]
name = "codewars"
version = "0.1.0"
description = "Python versions of Codewars Katas"
license = "MIT"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
readme = "README.md"
homepage = "https://codewars.com/users/matyama"
repository = "https://github.com/matyama/codewars"
keywords = ["codewars", "python", "algorithms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Unix",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
hypothesis = "*"
mypy = "*"
ruff = "*"
pytest = "*"
pytest-timeouts = "*"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
cache_dir = "/dev/null"
ignore_missing_imports = false
python_version = "3.10"

# equivalent to --strict except for the modifications above:
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "_pytest",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
