[workspace]
members = [
    "algebraic-lists",
    "best-travel",
    "bouncing-balls",
    "caa-stats",
    "count-duplicates",
    "delete-nth",
    "differentiation",
    "dubstep",
    "eval-expression",
    "in-array",
    "integer-partitions",
    "magnet-particles",
    "molecule",
    "parts-sums",
    "perimeter",
    "persistent-bugger",
    "population-growth",
    "prime-factors",
    "product-fib",
    "screen-patterns",
    "simple-graph",
    "snail",
    "spiralize",
    "validate-sudoku",
]

