[package]
name = "codewars"
description = "Rust solutions to Codewards Kata"
homepage = "https://github.com/matyama/codewars"
readme = "README.md"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
itertools = "0.10"
lazy_static = "1.4"
regex = "1.5"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
float_eq = "0.6"
ntest = "0.7"
rstest = "0.11"
