[package]
name = "best-travel"
description = "https://www.codewars.com/kata/55e7280b40e1c4a06d0000aa"
homepage = "https://github.com/matyama/codewars"
readme = "../README.md"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.10.0"
rstest = "0.11"
