[package]
name = "caa-stats"
description = "https://www.codewars.com/kata/55b3425df71c1201a800009c"
homepage = "https://github.com/matyama/codewars"
readme = "../README.md"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
rstest = "0.11"
