[package]
name = "differentiation"
description = "https://www.codewars.com/kata/584daf7215ac503d5a0001ae"
homepage = "https://github.com/matyama/codewars"
readme = "../README.md"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
regex = "1.5"
strum = { version = "0.21", features = ["derive"] }
