[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1
[profile.test.package."*"]
opt-level = 3

[dev-dependencies]
codewars = { version = "0.1.0", path = ".." }

[[example]]
name = "primes"
path = "primes.rs"
