[package]
name = "integer-partitions"
description = "https://www.codewars.com/kata/55cf3b567fc0e02b0b00000b"
homepage = "https://github.com/matyama/codewars"
readme = "../README.md"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"

[dependencies]
rstest = "0.11"
