[package]
name = "magnet-particles"
description = "https://www.codewars.com/kata/56c04261c3fcf33f2d000534"
homepage = "https://github.com/matyama/codewars"
readme = "../README.md"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"

[dependencies]
float_eq = "0.6.0"
itertools = "0.10.0"
