[package]
name = "screen-patterns"
description = "https://www.codewars.com/kata/585894545a8a07255e0002f1"
homepage = "https://github.com/matyama/codewars"
readme = "../README.md"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
rstest = "0.11"
